# qml-angry-birds

./: .gitignore  CMakeLists.txt  README.md  levelfactory.cpp  levelfactory.h  main.cpp
qml/: Archery.qml  BoxEntity.qml  CircleEntity.qml  CreateLevel.qml  Entity.qml  ItemEditor.qml  LevelChoose.qml  Main.qml  Play.qml  qml.qrc
